--- a/launch-countdown-timer-main/sass/style.css
+++ b/launch-countdown-timer-main/sass/style.css
@@ -11,6 +11,7 @@ body {
   font-size: 14px;
   color: #8486a9;
   font-weight: 700;
+  z-index: 0;
 }
 
 img {
@@ -50,6 +51,7 @@ main {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 50px 0;
+  z-index: 100;
 }
 
 main .stars {
@@ -78,12 +80,21 @@ main .card {
 }
 
 main .card .container {
-  width: 100%;
+  width: calc(100% - 10px);
   height: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#1e1f29), to(#343650));
-  background-image: linear-gradient(#1e1f29, #343650);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#2c2c44), to(#34364f));
+  background-image: linear-gradient(#2c2c44, #34364f);
   border-radius: 8px;
   margin-bottom: 10px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+main .card .container h2 {
+  font-size: 5rem;
+  font-weight: 900;
+  color: #fb6087;
 }
 
 main .socmed {
@@ -91,7 +102,13 @@ main .socmed {
 }
 
 main .socmed a {
-  padding: 20px;
+  margin: 20px;
   color: #8486a9;
+  -webkit-transition: .3s ease-in;
+  transition: .3s ease-in;
+}
+
+main .socmed a:hover {
+  color: #fb6087;
 }
 /*# sourceMappingURL=style.css.map */
