--- a/launch-countdown-timer-main/sass/style.scss
+++ b/launch-countdown-timer-main/sass/style.scss
@@ -28,6 +28,7 @@ p {
     color: white;
     letter-spacing: 5px;
     transform: translateY(100px);
+    text-align: center;
 }
 main {
     position: relative;
@@ -59,7 +60,7 @@ main {
     }
 
     .card {
-        min-width: 150px;
+        width: 150px;
         height: 150px;
         margin: 20px;
         text-align: center;
@@ -93,5 +94,23 @@ main {
             color: hsl(345, 95%, 68%);
         }
     
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 80px !important;
+        height: 80px !important;
+        margin: 5px !important;
+
+        h2{
+            font-size: 3rem !important;
+        }
+
+    }
+
+    p {
+        font-size: 0.7rem;
+        letter-spacing: 3px;
     }
 }
